[package]
name = "crypto-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crypto-bigint = { version = "0.3.2", features = [ "rand" ] }
clap = { version = "3.1.12", features = [ "derive" ] }
anyhow = "1.0.57"
