[package]
name = "crypto-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.12", features = [ "derive" ] }
anyhow = "1.0.57"
rand = "0.8.5"

[target.'cfg(windows)'.dependencies]
num-bigint-dig = { version = "0.8.1", features = ["rand"] }
# num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
num-integer = "0.1.45"

[target.'cfg(unix)'.dependencies]
rug = { version = "1.16.0", default-features = false, features = ["integer", "float", "rand" ] }